[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Backgrounds/courtroom.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/darwin.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/lawyer.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/judge.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Raleway-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Textures/indicator.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/dialogue.png" type="Texture" id=7]
[ext_resource path="res://CourtroomDialog.gd" type="Script" id=8]
[ext_resource path="res://Assets/Fonts/Raleway-Bold.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 746.558, 140 ), Vector2( 746.558, 146.268 ) ]
}

[node name="Courtroom1" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_left = -1.71219
margin_top = -0.143921
margin_right = 1028.29
margin_bottom = 603.856
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="Control"]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -410.109
margin_top = -209.61
margin_right = 415.891
margin_bottom = -9.60986
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="Control/Popup"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 409.771, -93.35 )
scale = Vector2( 0.809103, 0.850147 )
texture = ExtResource( 1 )

[node name="lawyer" type="Sprite" parent="Control/Popup"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 643.245, -89.437 )
texture = ExtResource( 3 )

[node name="darwin" type="Sprite" parent="Control/Popup"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 187.022, -108.597 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="judge" type="Sprite" parent="Control/Popup"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 564.242, -138.867 )
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Control/Popup"]
margin_right = 820.0
margin_bottom = 190.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="name-label" type="RichTextLabel" parent="Control/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.432
margin_top = 8.85608
margin_right = -456.568
margin_bottom = -150.144
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Time Travel Court"
text = "Time Travel Court"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog-text" type="RichTextLabel" parent="Control/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 67.0
margin_right = -21.0
margin_bottom = -29.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Charles Darwin, we are the Time Travel Court. You have been transported to the year 2093 to stand trial. The prosecution claims you invented the theory of evolution to support racism."
text = "Charles Darwin, we are the Time Travel Court. You have been transported to the year 2093 to stand trial. The prosecution claims you invented the theory of evolution to support racism."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="Control/Popup"]
position = Vector2( 746.558, 144.737 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Popup/next-indicator"]
autoplay = "IDLE"
anims/IDLE = SubResource( 3 )

[node name="Tween" type="Tween" parent="Control/Popup"]

[node name="JudgeTween" type="Tween" parent="Control/Popup"]

[node name="DarwinTween" type="Tween" parent="Control/Popup"]

[node name="BackgroundTween" type="Tween" parent="Control/Popup"]

[node name="MorrisTween" type="Tween" parent="Control/Popup"]
[connection signal="tween_completed" from="Control/Popup/Tween" to="Control/Popup" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Control/Popup/JudgeTween" to="Control/Popup" method="_on_Tween2_tween_completed"]
[connection signal="tween_completed" from="Control/Popup/DarwinTween" to="Control/Popup" method="_on_DarwinTween_tween_completed"]
[connection signal="tween_completed" from="Control/Popup/BackgroundTween" to="Control/Popup" method="_on_BackgroundTween_tween_completed"]
[connection signal="tween_completed" from="Control/Popup/MorrisTween" to="Control/Popup" method="_on_MorrisTween_tween_completed"]
